import inscryption.engine.Game;

public class Main
{
    public static void main(String[] args)
    {
        System.out.println("Another challenger... It has been ages.");

        Game jeu = new Game();
        jeu.lancerJeu();

    }
}
