package carte;

public abstract class CarteObstacle extends Carte
{
    public CarteObstacle(String nom, int pv) {
        super(nom, pv);
    }
}
